<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Messangero Mobile</string>
    <string name="app_name">Messangero Mobile</string>
    <string name="NoVouchersString">Δεν υπάρχουν δελτία για εμφάνιση</string>
    <string name="lblNumber">Αριθμός Αποστολής: </string>
    <string name="lblNumberShort">Α/Α</string>
    <string name="lblReceiverName">Παραλήπτης: </string>
    <string name="lblAddress">Διεύθυνση: </string>
    <string name="titleVoucherDetails">Λεπτομέρειες δελτίου</string>
    <string name="lblStatus">Τύπος Κίνησης: </string>
    <string name="lblSender">Αποστολέας: </string>
    <string name="lblName">Ονοματεπώνυμο: </string>
    <string name="lblVoucher">Αποστολής</string>
    <string name="lblReceiver">Παραλήπτης: </string>
    <string name="lblPacketsCount">Τεμάχια: </string>
    <string name="lblPacketsWeight">Βάρος: </string>
    <string name="lblCashPayment">Συν .Μετρητών: </string>    
    <string name="lblChecksCount">Επιταγές: </string>
    <string name="lblCheckPayment">Συν. Επιταγών: </string>
    <string name="lblNotes">Σχόλια: </string>    
    <string name="lblVoucherNotes">Voucher Σχόλια: </string>
    <string name="lblDeliveryNotes">Delivery Σχόλια: </string>
    <string name="lblDate">Ημ/νια Παραλαβής:</string>
    <string name="lblSignature">Υπογραφή</string>
    <string name="TodayVouchers">Δελτία προς παράδοση</string>
    <string name="titleVoucherDelivery">Δελτία που παράδοθηκαν</string>
    <string name="Save">Αποθήκευση</string>
    <string name="Sign">Υπογραφή</string>
    <string name="LoginScreen">Messangero Mobile</string>
    <string name="lblUsername">Όνομα Χρήστη</string>
    <string name="lblPassword">Κώδικος πρόσβασης</string>
    <string name="lblWrongInput">Λάθος όνομα χρήστη ή κωδικού πρόσβασης</string>
    <string name="btnLogin">Σύνδεση</string>
    <string name="btnDeliver">Στοιχεία Παράδοσης</string>
    <string name="btnGetDirection">Διεύθυνση</string>
    <string name="lblIP">IP</string>
    <string name="lblPort">Port</string>
    <string name="lblSyncModel">SyncModel</string>
    <string name="titleSettings">Ρυθμίσεις</string>
    <string name="btnDone">OK</string>
    <string name="btnCancel">Ακύρωση</string>
    <string name="miTodayVouchers">Σημερινά Δελτία </string>
    <string name="miSearch">Αναζήτηση</string>
    <string name="miScan">Σάρωση</string>
    <string name="miSync">Συγχρονισμός</string>
    <string name="lblVoucherType">Τύπος: </string>
    <string name="spVoucherTypePrompt">Επιλέξτε Τύπο</string>
    <string name="lblNotDeliveredType">Λόγος μη παράδοσής:</string>
    <string name="spNotDeliveredPrompt">Επιλέξτε λόγο μη παράδοσής</string>
    <string name="miSearchDate">Ημερομηνία</string>
    <string name="miSearchType">Τύπος</string>
    <string name="SaveDialog">Θέλετε να αποθηκεύσετε?</string>
    <string name="Yes">Ναί</string>
    <string name="No">Όχι</string>
    <string name="lblAllBarcodes">Όλες οι γραμμωτοί κώδικες</string>
    <string name="lblOnlyCode39">Μόνο Code 39</string>
    <string name="lblDataSyncPeriod">Data Περίοδου Sync</string>
    <string name="lblGPSSyncPeriod">GPS Περίοδοu Sync</string>
    <string name="titleSearchScreen">Οθόνη Αναζήτησης</string>
    <string name="titleSearchResultScreen">Αποτελεσμάτα Αναζήτησης</string>
    <string name="lblDateFrom">Ημερομηνία Από: </string>
    <string name="lblDateTo">Ημερομηνία Μέχρι: </string>
    <string name="lblClear">Διαγραφή</string>
    <string name="lblSettings">Ρυθμίσεις</string>
    <string name="lblExit">Έξοδος</string>
    <string name="miLogout">Αποσύνδεση</string>
    <string name="miResetDB">Επανεκκίνηση Βάσης</string>
    <string name="toast_sync_completed">Συγχρονισμός Ολοκληρώθηκε</string>
    <string name="miCallOffice">Καλέστε το Γραφείο</string>
    <string name="miCallCustomer">Καλέστε τον πελατή</string>
    <string name="miTodayOrders">Παραγγελίες</string>
    <string name="lblDocType">Τύπος Εγγράφου</string>
    <string name="spDocTypePrompt">Τύπος Εγγράφου</string>
    <string name="btnAccept">Αποδοχή</string>
    <string name="btnDecline">Απόρριψη</string>
    <string name="lblTodaVouchersDate">Ημ/νια:</string>
    <string name="lblTodaVouchersType">Τύπος:</string>
    <string name="lblPhone">Τηλέφωνο:</string>
    <string name="btnChoose">Επιλέξτε</string>
    <string name="btnSearch">Αναζήτηση</string>
    <string name="lblFilterType">Παραλαβή πρός Παράδοση</string>
    <string name="btnScanNewVoucher">Σάρωση νέου δελτίου</string>
    <string name="btnAddNewVoucher">Συμπληρώστε νέο δελτίο</string>
    <string name="titleOrderVoucherNumbers">Αριθμοί δελτίου παραγγελίας</string>
    <string name="miEdit">Επεξεργασία</string>
    <string name="miDelete">Διαγραφή</string>
    <string name="miScanAgain">Σάρωση ξανά</string>
    <string name="btnEditVouchers">Επεξεργασία δελτίου</string>
    <string name="miGroupVoucherDelivery">Ομαδική παράδοση αποστολών</string>
    <string name="VoucherWithNumNotExist">Ακαταχώρητο δελτίο</string>
    <string name="stringInvoice">Τιμολογιο</string>
    <string name="stringReceipt">Αποδειξη</string>
    <string name="stringVoucher">Δελτιο</string>
    <string name="stringOrder">Παραγγελία</string>
    <string name="stringLanguagePrompt">Επιλέξτε την γλώσσα</string>
    <string name="tabListCaption">Κατάλογος</string>
    <string name="tabMapCaption">Χάρτης</string>
    <string name="title_activity_place_location">Δρομολόγια</string>
    <string name="miGetRout">Δρομολόγιο</string>
    <string name="btnClear">Καθαρισμός</string>
    <string name="RateDialogText">Thank you for trying our product. We will appreciate if you leave any feedback and rate our application in play store.</string>
    <string name="btnClose">Close</string>
    <string name="lblVouchersToDeliverText">Προς παράδοση:</string>
    <string name="lblVouchersDeliveredText">Παραδόθηκε:</string>
    <string name="lblOrdersToTakeText">Για παραλαβή:</string>
    <string name="lblOrdersTakenText">Παραληφθεντα:</string>
    <string name="lblOrdersToAccept">Εκκρεμή:</string>
    <string name="EnterNumberDialog">Εισάγετε τον αριθμό</string>
    <string name="Empty"></string>
    <string name="empty"></string>
    <string name="NewVoucherNumber">Αριθμός Δελτίου</string>
    <string name="Deliver">Παράδοση</string>
    <string name="msgNoConnection">Data:%1$s GPS:%2$s</string>
    <string name="lblVoucherNotFound">Το Δελτίο δεν βρέθηκε!</string>
    <string name="lblTorch">Scan light</string>
    <string name="title_activity_signature_demo">SignatureDemoActivity</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnSearchAddress">Αναζήτηση<sting></sting></string>
    <string name="title_activity_select_vouchers">Επιλογή Voucher</string>
    <string name="lblDeliveryHour">΄Ωρα Παράδοσης: </string>
    <string name="lblDetailsParcelStatus">Επιστροφή</string>
    <string name="lblDeliveryParcelStatus">Επιστροφή παραλήφθηκε</string>
    <string name="lblCashExpShort">Πλ.μετρητά</string>
    <string name="lblCashRecShort">Εισπραχθέντα</string>
	<string name="lblCheckExpShort">Παρ. επιταγής</string>
    <string name="lblCheckRecShort">Ποσό επιταγής</string>
    <string name="miScanAgain1">Επαν. Σάρωσης</string>
    <string name="miEnterManually">Χειρ. Εσαγωγή</string>
    <string name="miAddNewVoucher">Προσθ. Voucher</string>
    <string name="msgParcelToTake">Επιστροφή!</string>
    <string name="lblReportType">Τύπος Αναφοράς</string>
    <string name="btnChooseVouchers">Επιλέξτε Vouchers</string>
    <string name="lblCharges">ΕΙΔΙΚΗ ΕΡΓΑΣΙΑ</string>
    <string name="lblCustomerType">ΧΡΕΩΣΗ</string>
    <string name="lblIfIsCreditValue">ΑΞΙΑ ΧΡΕΩΣΗΣ</string>
    <string name="CustomerSender">ΧΡΕΩΣΗ ΑΠΟΣΤΟΛΕΑ</string>
    <string name="CustomerReceiver">ΧΡΕΩΣΗ ΠΑΡΑΛΗΠΤΗ</string>
    <string name="lblTakeMoney">Take Money</string>
    <string name="lblGiveMoney">Give Money</string>
    <string name="miRearrange">Rearrange</string>
    <string name="msgGroupDeliveryError">Cannot deliver group of vouchers because the cash or checks value is not enough</string>
    <string name="btnTakePhotoCamera">Camera</string>
    <string name="btnTakePhotoGallery">Gallery</string>
    <string name="lblTransactions">Transactions</string>
</resources>
