<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >
    
     <TextView
        android:id="@+id/lblTitle"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"/>
    
     <TextView
        android:id="@+id/lblUserName"
        android:text="@string/lblUsername"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblTitle"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/tbUserName"
        android:layout_width="fill_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblUserName"
        android:textColor="@android:color/black">        
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/lblPassword"
        android:text="@string/lblPassword"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbUserName"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/tbPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:singleLine="true"
        android:layout_below="@id/lblPassword"
        android:textColor="@android:color/black"
    />
    
        <TextView
        android:id="@+id/lblWrongInput"
        android:text="@string/lblWrongInput"
        android:textColor="#FF0000"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbPassword"
        android:textStyle="bold"
        android:textSize="14sp"/>
        
        <Button
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@id/lblWrongInput"
            android:paddingTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btnLogin"
            android:onClick="onBtnLoginClick"
            />

        <Spinner 
        android:id="@+id/spLanguage"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:drawSelectorOnTop="true"
        android:prompt="@string/stringLanguagePrompt"
    />
        
</RelativeLayout>