<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:cacheColorHint="@android:color/white"
            android:divider="@color/black"
            android:dividerHeight="2dp" />

        <TextView
            android:id="@+id/android:empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/NoVouchersString" >
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnOK"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnOK_OnClick"
                android:text="@string/btnDone"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnCancel_OnClick"
                android:text="@string/btnCancel"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutBottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAddVoucher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnAddVoucher_OnClick"
                android:text="@string/btnAddNewVoucher"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnScanVoucher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnScanVoucher_OnClick"
                android:text="@string/btnScanNewVoucher"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>